<resources>
    <string name="app_name">Mobi3</string>

    <string name="meetsHeader">Встречи</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Настройкти</string>
    <string name="action_add_meet">Создать</string>

    <string name="meetDefaultName">Что-то пошло не так :(</string>
    <string name="meetDefaultDescription">…</string>
    <string name="participate">Принять участие</string>

    <string name="fromText">С:</string>
    <string name="toText">по:</string>
    <string name="from">Тогда</string>
    <string name="to">Когда-то</string>
    <string name="title_activity_add_meet">Новая встреча</string>

    <string name="new_meet_descr_ht">Опасание</string>
    <string name="new_meet_name_ht">Название</string>
    <string name="new_meet_date_ht">Дата</string>
    <string name="new_meet_start_ht">Начало</string>
    <string name="new_meet_end_ht">Окончание</string>
    <string name="new_meet_priority_ht">Приоритет</string>
    <string name="empty_date">____.____.____</string>
    <string name="empty_time">___ : ___</string>

    <string name="cancel">Назад</string>
    <string name="delete">Удалить</string>
    <string name="create">Создать</string>
    <string name="set_preferences">Настройки</string>
    <string name="rb_today_t">За сегодня</string>
    <string name="rb_interval_t">Задать интервал</string>
    <string name="rb_search_t">Поиск</string>
    <string name="title_activity_meet">MeetActivity</string>
    <string name="participates_ht">Участники:</string>
</resources>
