<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="#eeeeee" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/meetName"
        android:layout_alignParentTop="true"
        android:text="@string/meetDefaultName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/meetDefaultDescription"
        android:id="@+id/meetDescription"
        android:layout_below="@+id/meetName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participateCheckBox"
        android:checked="false"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:layout_alignBottom="@+id/delete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/participate"
        android:id="@+id/participate"
        android:gravity="center"
        android:layout_alignBottom="@+id/participateCheckBox"
        android:layout_alignTop="@+id/participateCheckBox"
        android:layout_toEndOf="@+id/fromIdleTo" />


    <!--fromText-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fromText"
        android:id="@+id/fromText"
        android:layout_below="@+id/meetDescription"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp" />

    <!--from-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from"
        android:gravity="center"
        android:id="@+id/from"
        android:layout_alignTop="@+id/fromText"
        android:layout_alignBottom="@+id/fromText"
        android:layout_toEndOf="@+id/fromText"
        android:layout_toStartOf="@+id/fromIdleTo"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <!--Холостой-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/fromIdleTo"
        android:layout_alignTop="@+id/fromText"
        android:layout_alignBottom="@+id/fromText"
        android:layout_centerHorizontal="true" />

    <!-- toText-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/toText"
        android:id="@+id/toText"
        android:layout_alignTop="@+id/fromText"
        android:layout_alignBottom="@+id/fromText"
        android:layout_toEndOf="@+id/from"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />

    <!-- to-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to"
        android:id="@+id/to"
        android:gravity="center"
        android:layout_alignTop="@+id/fromText"
        android:layout_alignBottom="@+id/fromText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/toText"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/delete"
        android:id="@+id/delete"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/from"
        android:layout_marginRight="5dp"
        android:layout_alignEnd="@+id/from" />
</RelativeLayout>