<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bot">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:fillViewport="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!--ИМЯ-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_meet_name_ht"
                android:id="@+id/new_meet_name_header"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/new_meet_end_h"
                android:layout_alignBottom="@+id/new_meet_name"
                android:gravity="center_vertical" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_meet_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:singleLine="true"
                android:layout_toEndOf="@+id/new_meet_name_header" />


            <!--ОПИСАНИЕ-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_meet_descr_ht"
                android:id="@+id/new_meet_descr_header"
                android:gravity="center_vertical"
                android:layout_alignBottom="@+id/new_meet_descr"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/new_meet_end_h"
                android:layout_alignTop="@+id/new_meet_descr" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/new_meet_descr"
                android:layout_below="@+id/new_meet_name"
                android:layout_alignEnd="@+id/new_meet_name"
                android:layout_alignStart="@+id/new_meet_name" />

            <!--ДАТА-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_meet_date_ht"
                android:id="@+id/new_meet_date_h"
                android:layout_alignEnd="@+id/new_meet_end_h"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/new_meet_date"
                android:layout_alignTop="@+id/new_meet_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/empty_date"
                android:id="@+id/new_meet_date"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_toEndOf="@+id/new_meet_date_h"
                android:background="#eeeeee"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/new_meet_descr"
                android:layout_marginTop="5dp" />

            <!--НАЧАЛО-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_meet_start_ht"
                android:id="@+id/new_meet_start_h"
                android:layout_below="@+id/new_meet_date"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/new_meet_end"
                android:layout_above="@+id/new_meet_end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/empty_time"
                android:id="@+id/new_meet_start"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_toEndOf="@+id/new_meet_start_h"
                android:background="#eeeeee"
                android:layout_below="@+id/new_meet_date"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp" />

            <!--ОКОНЧАНИЕ-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_meet_end_ht"
                android:id="@+id/new_meet_end_h"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/new_meet_end"
                android:layout_alignTop="@+id/new_meet_end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/empty_time"
                android:id="@+id/new_meet_end"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_toEndOf="@+id/new_meet_end_h"
                android:background="#eeeeee"
                android:layout_below="@+id/new_meet_start"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp" />

            <!--ПРИОРИТЕТ-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_meet_priority_ht"
                android:id="@+id/new_meet_priority_h"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/new_meet_end_h"
                android:layout_alignBottom="@+id/prioritySpinner"
                android:layout_alignTop="@+id/prioritySpinner" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prioritySpinner"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/new_meet_end_h"
                android:layout_below="@+id/new_meet_end"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp" />

        </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bot"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/idleCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:id="@+id/idleCenter"
                android:layout_alignParentTop="false"
                android:layout_centerInParent="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/create"
                android:id="@+id/create"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/idleCenter" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
