<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

    <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_today_t"
            android:id="@+id/rb_today"
            android:checked="true"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_interval_t"
            android:id="@+id/rb_interval"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_search_t"
            android:id="@+id/rb_search"/>
    </RadioGroup>

    <!--ИНТЕРВАЛ-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interval_panel"
        android:layout_margin="5dp"
        android:visibility="gone">

        <!--FROM-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="C:"
            android:id="@+id/interval_start_h"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/interval_start"
            android:layout_alignBottom="@+id/interval_start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/empty_date"
            android:id="@+id/interval_start"
            android:gravity="center"
            android:background="#eeeeee"
            android:layout_toLeftOf="@+id/idleCenter"
            android:layout_toRightOf="@+id/interval_start_h"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idleCenter"
            android:layout_centerHorizontal="true" />

        <!--TO-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="по:"
            android:id="@+id/interval_end_h"
            android:layout_alignBottom="@+id/interval_end"
            android:layout_alignStart="@+id/idleCenter"
            android:layout_alignTop="@+id/interval_end" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/empty_date"
            android:id="@+id/interval_end"
            android:gravity="center"
            android:background="#eeeeee"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/interval_end_h"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_panel"
        android:visibility="gone">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search"
            android:visibility="visible" />
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/meets_swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/meet_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="5dp"
            android:drawSelectorOnTop="false"
            android:clipToPadding="false"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"/>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>