<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.home.beywer.mobi3.activites.MeetActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/descr"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <!--FROM-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="C:"
        android:id="@+id/interval_start_h"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/interval_start"
        android:layout_alignTop="@+id/interval_start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_date"
        android:id="@+id/interval_start"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/descr"
        android:layout_toEndOf="@+id/interval_start_h"
        android:layout_toLeftOf="@+id/idleCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idleCenter"
        android:layout_centerHorizontal="true" />

    <!--TO-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="по:"
        android:id="@+id/interval_end_h"
        android:layout_alignBottom="@+id/interval_end"
        android:layout_alignStart="@+id/idleCenter"
        android:layout_alignTop="@+id/interval_end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_date"
        android:id="@+id/interval_end"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/descr"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/interval_end_h" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/delete"
        android:id="@+id/delete"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/idleCenter" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participateCheckBox"
        android:checked="false"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/delete"
        android:layout_alignEnd="@+id/interval_end"
        android:layout_alignTop="@+id/delete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/participate"
        android:id="@+id/participate"
        android:gravity="center"
        android:layout_alignBottom="@+id/participateCheckBox"
        android:layout_toRightOf="@+id/idleCenter"
        android:layout_alignTop="@+id/delete"
        android:layout_toStartOf="@+id/participateCheckBox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/participates_ht"
        android:id="@+id/participates_h"
        android:layout_below="@+id/interval_start_h"
        android:layout_marginTop="7dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/delete"
        android:layout_below="@+id/participates_h"
        android:layout_marginTop="7dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/interval_start_h" >

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/participants" />
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
